# 7T_BIDS_Organiser

./: .gitignore  README.md  environment.yml  pyproject.toml
bids7t/: __init__.py  __main__.py  cli.py
bids7t/commands/: __init__.py  dcm2src.py  fixanat.py  fixepi.py  fixfmap.py  init.py  populate_templates.py  qc.py  reorient.py  run_all.py  slicetime.py  src2rawdata.py  validate.py
bids7t/core/: __init__.py  bids_naming.py  config.py  session.py  utils.py
dcm2bids/: cli.py
dcm2bids/commands/: __init__.py  b1dcm2rawdata.py  b1src2rawdata.py  fixanat.py  fixepi.py  fixfmap.py  init_study.py  populate_templates.py  qc.py  run_all.py  slicetime.py  src2rawdata.py  validate.py
dcm2bids/core/: __init__.py  session.py  settings.py  utils.py
