[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcm2bids"
version = "0.2.0"
description = "DICOM to BIDS conversion tools for 7T MRI data"
readme = "README.md"
authors = [
    {name = "Lund University 7T MRI Group"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["BIDS", "MRI", "DICOM", "neuroimaging", "7T"]

dependencies = [
    "click>=8.0",
    "nibabel>=5.0",
    "numpy>=1.20",
    "pydicom>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/RioPhillips/dcm2bids"
Documentation = "https://github.com/RioPhillips/dcm2bids#readme"
Repository = "https://github.com/RioPhillips/dcm2bids.git"

[project.scripts]
dcm2bids = "dcm2bids.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dcm2bids*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
