[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bids7t"
version = "0.3.0"
description = "DICOM to BIDS conversion tools for 7T MRI data"
readme = "README.md"
authors = [
    {name = "Lund University 7T MRI Group"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["BIDS", "MRI", "DICOM", "neuroimaging", "7T", "dcm2niix", "Philips"]

dependencies = [
    "click>=8.0",
    "nibabel>=5.0",
    "numpy>=1.20",
    "pydicom>=2.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/RioPhillips/7T_BIDS_Organiser"
Documentation = "https://github.com/RioPhillips/7T_BIDS_Organiser#readme"
Repository = "https://github.com/RioPhillips/7T_BIDS_Organiser.git"

[project.scripts]
bids7t = "bids7t.cli:main"
init = "bids7t.cli:init_main"
dcm2src = "bids7t.cli:dcm2src_main"
src2rawdata = "bids7t.cli:src2rawdata_main"
fixanat = "bids7t.cli:fixanat_main"
fixfmap = "bids7t.cli:fixfmap_main"
fixepi = "bids7t.cli:fixepi_main"
reorient = "bids7t.cli:reorient_main"
slicetime = "bids7t.cli:slicetime_main"
run-all = "bids7t.cli:run_all_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bids7t*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]